enable paypal package in buildout

--- a/recurring-payment.cfg
+++ b/recurring-payment.cfg
@@ -30,7 +30,7 @@ eggs =
     getpaid.wizard
     getpaid.nullpayment
     getpaid.authorizedotnet
-#    getpaid.paypal
+    getpaid.paypal
     pfg.donationform
     plone.reload
 
