--- a/base.cfg
+++ b/base.cfg
@@ -11,7 +11,6 @@ auto-checkout =
 # releasing eggs properly to PyPI and managing versions with a KGS
     hurry.workflow
     yoma.batching
-    zc.resourcelibrary
     zc.table
 always-checkout = true
 
@@ -46,7 +45,9 @@ urls =
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = ${buildout:eggs}
+eggs =
+    ${buildout:eggs}
+    Products.PloneGetPaid [test]
 
 [googlecheckout]
 develop =
