Update repository of five.intid

--- a/sources.cfg
+++ b/sources.cfg
@@ -115,7 +115,7 @@ getpaid.wizard = svn https://getpaid.googlecode.com/svn/getpaid.wizard/trunk
 ore.viewlet = svn https://getpaid.googlecode.com/svn/vendor/ore.viewlet/trunk/
 
 # integer object references
-five.intid = svn https://svn.plone.org/svn/collective/five.intid/trunk
+five.intid = git https://github.com/plone/five.intid.git
  
 # workflow engine for orders/checkout wizards, etc.
 hurry.workflow = svn https://getpaid.googlecode.com/svn/vendor/hurry.workflow/branches/0.9
