update mr.developer urls

--- a/4.1b2.cfg
+++ b/4.1b2.cfg
@@ -10,8 +10,8 @@ auto-checkout +=
     Products.PloneGetPaid
     getpaid.core
     getpaid.nullpayment
-    ore.viewlet
-    yoma.batching
+    getpaid.ore.viewlet
+    getpaid.yoma.batching
 
 [versions]
 five.intid = 0.5.2
