--- a/base.cfg
+++ b/base.cfg
@@ -9,8 +9,8 @@ auto-checkout =
     getpaid.wizard
 # the following must stay checked out in the dev buildout, until we start
 # releasing eggs properly to PyPI and managing versions with a KGS
-    hurry.workflow
-    yoma.batching
+    getpaid.hurry.workflow
+    getpaid.yoma.batching
     zc.table
 always-checkout = true
 
