--- a/multiple-payment.cfg
+++ b/multiple-payment.cfg
@@ -8,6 +8,6 @@ eggs +=
      getpaid.paymentprocessors
 
 [sources]
-Products.PloneGetPaid = svn https://getpaid.googlecode.com/svn/Products.PloneGetPaid/branches/GetPaidForPlone4-multiplepaymentprocessors
-getpaid.nullpayment = svn https://getpaid.googlecode.com/svn/getpaid.nullpayment/branches/GetPaidForPlone4-multiplepaymentprocessors
-getpaid.paymentprocessors = svn https://getpaid.googlecode.com/svn/getpaid.paymentprocessors/branches/GetPaidForPlone4
+Products.PloneGetPaid = git https://github.com/collective/Products.PloneGetPaid branch=GetPaidForPlone4-multiplepaymentprocessors
+getpaid.nullpayment = git https://github.com/collective/getpaid.nullpayment branch=GetPaidForPlone4-multiplepaymentprocessors
+getpaid.paymentprocessors = git https://github.com/collective/getpaid.paymentprocessors branch=GetPaidForPlone4
