--- a/recurring-payment.cfg
+++ b/recurring-payment.cfg
@@ -8,9 +8,9 @@ auto-checkout =
     getpaid.formgen
     getpaid.nullpayment
     getpaid.paypal
-    hurry.workflow
+    getpaid.hurry.workflow
+    getpaid.yoma.batching
     pfg.donationform
-    yoma.batching
     zc.resourcelibrary
     zc.table
     
@@ -22,9 +22,9 @@ eggs =
     zc.resourcelibrary
     zc.table
     five.intid
-    yoma.batching
-    ore.viewlet
-    hurry.workflow
+    getpaid.yoma.batching
+    getpaid.ore.viewlet
+    getpaid.hurry.workflow
     getpaid.core
     getpaid.formgen
     getpaid.wizard
@@ -39,5 +39,5 @@ find-links =
 	http://download.zope.org/distribution
 
 [sources]
-getpaid.paypal = svn https://getpaid.googlecode.com/svn/getpaid.paypal/branches/seattle-recurring-payment
+getpaid.paypal = git https://github.com/collective/getpaid.paypal branch=seattle-recurring-payment
 pfg.donationform = svn https://svn.plone.org/svn/collective/pfg.donationform/trunk
