--- a/sources.cfg
+++ b/sources.cfg
@@ -64,8 +64,8 @@
 #	# 
 #	[sources]
 #	# Get all definitions from getpaid.trunk.cfg file by extends directive above
-#	Products.PloneGetPaid = svn https://getpaid.googlecode.com/svn/Products.PloneGetPaid/branches/multiplepaymentprocessors
-#	getpaid.paymentprocessors = svn https://getpaid.googlecode.com/svn/getpaid.paymentprocessors/trunk/
+#	Products.PloneGetPaid = git https://github.com/collective/Products.PloneGetPaid/branches/multiplepaymentprocessors
+#	getpaid.paymentprocessors = git https://github.com/collective/getpaid.paymentprocessors/trunk/
 #
 #
 # - If you get error like ERROR: Can't switch package 'y' from 'https://x/svn/y/trunk/', because it's dirty.
@@ -100,38 +100,38 @@ always-accept-server-certificate = true
 [sources]
 
 # PloneGetPaid product
-Products.PloneGetPaid = svn https://getpaid.googlecode.com/svn/Products.PloneGetPaid/trunk/
+Products.PloneGetPaid = git https://github.com/collective/Products.PloneGetPaid
 
 # core
-getpaid.core = svn https://getpaid.googlecode.com/svn/getpaid.core/trunk
+getpaid.core = git https://github.com/collective/getpaid.core
 
 # checkout wizards
-getpaid.wizard = svn https://getpaid.googlecode.com/svn/getpaid.wizard/trunk
+getpaid.wizard = git https://github.com/collective/getpaid.wizard
 
 # import / export
-#getpaid.io = svn https://getpaid.googlecode.com/svn/getpaid.io/trunk
+#getpaid.io = git https://github.com/collective/getpaid.io
 
 # various viewlet conviences
-ore.viewlet = svn https://getpaid.googlecode.com/svn/vendor/ore.viewlet/trunk/
+getpaid.ore.viewlet = git https://github.com/collective/getpaid.ore.viewlet
 
 # workflow engine for orders/checkout wizards, etc.
-hurry.workflow = svn https://getpaid.googlecode.com/svn/vendor/hurry.workflow/branches/0.9
+getpaid.hurry.workflow = git https://github.com/collective/getpaid.hurry.workflow/
 
 # payment processors
-getpaid.googlecheckout = svn https://getpaid.googlecode.com/svn/getpaid.googlecheckout/trunk
-getpaid.authorizedotnet = svn https://getpaid.googlecode.com/svn/getpaid.authorizedotnet/trunk
-getpaid.nullpayment = svn https://getpaid.googlecode.com/svn/getpaid.nullpayment/trunk
-getpaid.paymentech = svn https://getpaid.googlecode.com/svn/getpaid.paymentech/trunk
-getpaid.paypal = svn https://getpaid.googlecode.com/svn/getpaid.paypal/trunk/
-getpaid.payflowpro = svn https://getpaid.googlecode.com/svn/getpaid.payflowpro/trunk/
-getpaid.ogone = svn https://getpaid.googlecode.com/svn/getpaid.ogone/trunk
-getpaid.pxpay = svn https://getpaid.googlecode.com/svn/getpaid.pxpay/trunk
-getpaid.clickandbuy = svn https://getpaid.googlecode.com/svn/getpaid.clickandbuy/trunk/
-getpaid.pagseguro = svn https://getpaid.googlecode.com/svn/getpaid.pagseguro/trunk/
+getpaid.googlecheckout = git https://github.com/collective/getpaid.googlecheckout
+getpaid.authorizedotnet = git https://github.com/collective/getpaid.authorizedotnet
+getpaid.nullpayment = git https://github.com/collective/getpaid.nullpayment
+getpaid.paymentech = git https://github.com/collective/getpaid.paymentech
+getpaid.paypal = git https://github.com/collective/getpaid.paypal
+getpaid.payflowpro = git https://github.com/collective/getpaid.payflowpro
+getpaid.ogone = git https://github.com/collective/getpaid.ogone
+getpaid.pxpay = git https://github.com/collective/getpaid.pxpay
+getpaid.clickandbuy = git https://github.com/collective/getpaid.clickandbuy
+getpaid.pagseguro = git https://github.com/collective/getpaid.pagseguro
 
 # shipping methods
-getpaid.flatrateshipping = svn https://getpaid.googlecode.com/svn/getpaid.flatrateshipping/trunk
-getpaid.ups = svn https://getpaid.googlecode.com/svn/getpaid.ups/trunk
+getpaid.flatrateshipping = git https://github.com/collective/getpaid.flatrateshipping
+getpaid.ups = git https://github.com/collective/getpaid.ups
 
 # payment processor libraries
 zc.authorizedotnet = svn svn://svn.zope.org/repos/main/zc.authorizedotnet/trunk
@@ -142,19 +142,19 @@ zc.table = svn svn://svn.zope.org/repos/main/zc.table/tags/zc.table-0.5.1
 zc.resourcelibrary = svn svn://svn.zope.org/repos/main/zc.resourcelibrary/tags/zc.resourcelibrary-0.5
 
 # batching
-yoma.batching = svn https://getpaid.googlecode.com/svn/vendor/yoma.batching
+getpaid.yoma.batching = git https://github.com/collective/getpaid.yoma.batching
 
 # discount
-getpaid.discount = svn https://getpaid.googlecode.com/svn/getpaid.discount/trunk
+getpaid.discount = git https://github.com/collective/getpaid.discount
 
 # others
-getpaid.report = svn https://getpaid.googlecode.com/svn/getpaid.report/trunk/
-getpaid.warehouse = svn https://getpaid.googlecode.com/svn/getpaid.warehouse/trunk/
-getpaid.formgen = svn https://getpaid.googlecode.com/svn/getpaid.formgen/trunk/
+getpaid.report = git https://github.com/collective/getpaid.report
+getpaid.warehouse = git https://github.com/collective/getpaid.warehouse
+getpaid.formgen = git https://github.com/collective/getpaid.formgen
 
 # PloneGetPaid Salesforce integration
-getpaid.SalesforcePloneFormGenAdapter = svn https://getpaid.googlecode.com/svn/getpaid.SalesforcePloneFormGenAdapter/trunk/
-getpaid.SalesforceOrderRecorder = svn https://getpaid.googlecode.com/svn/getpaid.SalesforceOrderRecorder/trunk/
+getpaid.SalesforcePloneFormGenAdapter = git https://github.com/collective/getpaid.SalesforcePloneFormGenAdapter
+getpaid.SalesforceOrderRecorder = git https://github.com/collective/getpaid.SalesforceOrderRecorder
 
 ##########################################
 #
