--- a/4.3.cfg
+++ b/4.3.cfg
@@ -2,15 +2,12 @@
 extends =
     base.cfg
     http://dist.plone.org/release/4.3/versions.cfg
+
 parts =
     instance
     test
 
 auto-checkout +=
-    Products.PloneGetPaid
-    getpaid.core
-    getpaid.nullpayment
-    getpaid.ore.viewlet
-    getpaid.yoma.batching
 
 [versions]
+zc.table = 0.9.0
