--- a/base.cfg
+++ b/base.cfg
@@ -7,11 +7,10 @@ auto-checkout =
     Products.PloneGetPaid
     getpaid.core
     getpaid.wizard
-# the following must stay checked out in the dev buildout, until we start
-# releasing eggs properly to PyPI and managing versions with a KGS
     getpaid.hurry.workflow
     getpaid.yoma.batching
-    zc.table
+    getpaid.nullpayment
+    getpaid.ore.viewlet
 always-checkout = true
 
 eggs =
@@ -25,18 +24,6 @@ http-address = 8080
 debug-mode = on
 verbose-security = on
 eggs = ${buildout:eggs}
-
-# If you want to register ZCML slugs for any packages, list them here.
-# e.g. zcml = my.package my.other.package
-zcml =
-#    ${googlecheckout:zcml}
-#    getpaid.formgen
-
-products =
-#    ${buildout:directory}/develop-products
-#    ${buildout:directory}/develop-debug
-#    ${buildout:directory}/parts/test-recorder
-
 
 [test-recorder]
 recipe = infrae.subversion
@@ -56,5 +43,3 @@ develop =
 eggs =
     gchecky
     getpaid.googlecheckout
-#zcml =
-#    getpaid.googlecheckout-overrides
