--- a/sources.cfg
+++ b/sources.cfg
@@ -167,7 +167,7 @@ eggs =
     five.intid
     yoma.batching
     ore.viewlet
-    hurry.workflow
+    getpaid.hurry.workflow
     getpaid.core
     getpaid.wizard
     getpaid.nullpayment
