Revert "rename hurry.workflow to getpaid.hurry.workflow"
This reverts commit 1349a4c134774c9f8fac5fdb25518cc3cdaa5b95.

--- a/sources.cfg
+++ b/sources.cfg
@@ -167,7 +167,7 @@ eggs =
     five.intid
     yoma.batching
     ore.viewlet
-    getpaid.hurry.workflow
+    hurry.workflow
     getpaid.core
     getpaid.wizard
     getpaid.nullpayment
